# WBC

./: .gitignore  CMakeLists.txt  wbc_mario2d_SI_new
analysis/: ERP_CFM.m  Nan_detection.m  compareData_Webots_Test.m  compareLogData.m  plotJointTorqueVelocity.m  plotLogData_wbc.m  plotLogData_wbc_old.m
analysis/worlds/: Diamond2D.wbt  Diamond2D_Y_up.wbt  Diamond2D_hipm_vmc.wbt  Diamond2D_real_flag_1.wbt  Diamond2D_real_flag_1_zero.wbt  Diamond2D_v2_flag_1.wbt  Diamond2D_v2_flag_1_sup.wbt  Diamond2D_v2_flag_3.wbt  readme.txt
include/: DiamondKinematics.h  constraintDefinition_Mario2D.h  dataProcessToolkit.h  motionPlan.h  newController.h  planToolkit.h  robotDynamics_Mario2D.h  robotMessage.h  stateEstimation.h  taskControl.h  taskDefinition_Mario2D.h  webotsInterface.h
lib/: CMakeLists.txt
lib/include/: constraint.h  hqpWbc.h  nspWbc.h  robotDynamics.h  task.h  wbc.h  wqpWbc.h
lib/src/: constraint.cpp  hqpWbc.cpp  nspWbc.cpp  robotDynamics.cpp  task.cpp  wbc.cpp  wqpWbc.cpp
src/: DiamondKinematics.cpp  constraintDefinition_Mario2D.cpp  dataProcessToolkit.cpp  main.cpp  motionPlan.cpp  newController.cpp  planToolkit.cpp  robotDynamics_Mario2D.cpp  stateEstimation.cpp  taskControl.cpp  taskDefinition_Mario2D.cpp  webotsInterface.cpp
